fix: trim to intro; point to refined-type README for depth
Drop trade-offs, sweet-spots, and caveats sections — that content
lives in the README. Article now introduces Valhalla and the idea,
then hands off.

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>